--- a/Yapbam/src/net/yapbam/gui/tools/currencyNames_pt.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/currencyNames_pt.properties
@@ -1,35 +1,35 @@
-AUD=Dólar australiano
+AUD=D\u00F3lar Australiano
 BGN=Lev
 BRL=Real
-CAD=Dólar Canadense
-CHF=Franco suíço
-CNY=Renminbi
+CAD=D\u00F3lar Canadense
+CHF=Franco Su\00ED\u00E7o
+CNY=Yuan Renminbi
 CZK=Coroa
-DKK=Coroa dinamarquesa
-EEK=Coroa estoniana
+DKK=Coroa Dinamarquesa
+EEK=Coroa Estoniana
 EUR=Euro
 GBP=Libra Esterlina
-HKD=Dólar de Hong Kong
+HKD=D\u00F3lar de Hong Kong
 HRK=Kuna
-HUF=Forint
-IDR=Rupia indonésia
-INR=Rupia indiana
-ISK=Krona islandesa
+HUF=Florim
+IDR=Rupia Indon\u00E9sia
+INR=Rupia Indiana
+ISK=Krona Islandesa
 JPY=Iene
-KRW=Won sul coreano
+KRW=Won Sul Coreano
 LTL=Litas
 LVL=Lats
-MXN=Peso Mexicano
-MYR=Ringgit 
-NOK=Coroa norueguesa
-NZD=Dólar da Nova Zelândia 
-PHP=Peso filipino
+MXN=Peso Novo Mexicano
+MYR=Ringgit
+NOK=Coroa Norueguesa
+NZD=D\u00F3lar Neozeland\u00EAs 
+PHP=Peso Filipino
 PLN=Zloty
 RON=Novo Leu
-RUB=Rublo 
+RUB=Rublo
 SEK=Coroa Sueca
-SGD=Dólar de Cingapura
-THB=Bath
-TRY=Nova Lira turca
-USD=Dólar Americano
+SGD=D\u00F3lar de Cingapura
+THB=Baht
+TRY=Lira Turca
+USD=D\u00F3lar Americano
 ZAR=Rand
