--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -7,7 +7,7 @@ MainFrame.CheckedBalance.ToolTip=Balan\u00e7o da moeda verificada (transa\u00E7\
 MainFrame.CurrentBalance.ToolTip=Balan\u00e7o atual (transa\u00E7\u00F5es com valores a p\u00E1rtir da data de hoje ser\u00E3o ignoradas)
 MainFrame.FinalBalance.ToolTip=Balan\u00e7o final ( nenhuma transa\u00E7\U00E3o ser\u00E1 ignorada)
 MainFrame.Transactions=transa\u00E7\u00F5es
-MainFrame.Transactions.toolTip=Mostra a tabela de transa\u00E7\u00F5es e as ferramentas de ediï¿½\u00E3o, duplicados, verificar...
+MainFrame.Transactions.toolTip=Mostra a tabela de transa\u00E7\u00F5es e as ferramentas de ediç\u00E3o, duplicados, verificar...
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Balan\u00e7o negativo: {0}
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Balan\u00e7o positivo: {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=Sum\u00E1rio de balan\u00e7o
@@ -37,7 +37,7 @@ MainMenu.Open=Abrir
 MainMenu.Open.Mnemonic=A
 MainMenu.Open.Accelerator=A
 MainMenu.Open.ToolTip=Abri um arquivo da sua conta salvo anteriormente
-MainMenu.Open.Error.DialogContent=Desculpe,  nï¿½o foi poss\u00EDvel ler arquivo {0}.\n este arquivo est\u00E1 corrompido.
+MainMenu.Open.Error.DialogContent=Desculpe,  não foi poss\u00EDvel ler arquivo {0}.\n este arquivo est\u00E1 corrompido.
 
 MainMenu.Save=Salvar
 MainMenu.Save.Mnemonic=S
@@ -106,7 +106,7 @@ MainMenuBar.Filter=Filtro
 MainMenuBar.Filter.Tooltip=Filtra a tabela the transa\u00E7\u00F5es
 MainMenuBar.Filter.Mnemonic=I
 MainMenuBar.checked=transa\u00E7\u00F5es verificadas
-MainMenuBar.notChecked=transa\u00E7\u00F5es nï¿½o verificadas        
+MainMenuBar.notChecked=transa\u00E7\u00F5es não verificadas        
 MainMenuBar.Receipts=Recibos
 MainMenuBar.Expenses=Despesas
 MainMenuBar.NoFilter=Sem filtro
@@ -142,7 +142,7 @@ MainMenu.CheckUpdate.Success.title=Atualiza\u00e7\u00E3o n\u00E3o est\u00E1 disp
 MainMenu.CheckUpdate.NoUpdate.title=Atualiza\u00e7\u00E3o est\u00E1 dispon\u00EDvel
 MainMenu.CheckUpdate.NoUpdate=Yapbam est\u00E1 atualizado
 MainMenu.CheckUpdate.FirstRun.title=Verificar se atualiza\u00E7\u00F5es est\u00E3o dispon\u00EDveis
-MainMenu.CheckUpdate.FirstRun.message=<HTML>Bem vindo ao Yapbam \!<BR><BR>Yapbam pode ser conectado a Internet para verificar-se uma nova vers\u00E3o est\u00E1 dispon\u00EDvel.<BR>Voc\u00EA gostaria que o Yapbam fizesse sempre esta verifica\u00e7\u00E3o no in\u00EDcio?<BR><BR>Ce resta modifica\u00e7\u00E3o pode ser efetuada na configura\u00e7\u00E3o de Prefer\u00EAncias (no menu Arquivo)</html>
+MainMenu.CheckUpdate.FirstRun.message=<HTML>Bem vindo ao Yapbam \!<BR><BR>Yapbam pode ser conectado a Internet para verificar-se uma nova vers\u00E3o est\u00E1 dispon\u00EDvel.<BR>Voc\u00EA gostaria que o Yapbam fizesse sempre esta verifica\u00e7\u00E3o no in\u00EDcio?<BR><BR>Esta modifica\u00e7\u00E3o pode ser efetuada na configura\u00e7\u00E3o de Prefer\u00EAncias (no menu Arquivo)</html>
 BalanceHistory.title=Hist\u00F3ria do Balan\u00E7o
 BalanceHistory.toolTip=Gr\u00E1fico do balan\u00E7o do dia
 BalanceHistory.balance=Balan\u00E7o do {0} : {1}
@@ -151,7 +151,7 @@ BalanceHistory.showGrid=Mostra a grade
 BalanceHistory.showGrid.toolTip=Selecione esta caixa para mostra a grade
 BalanceHistory.report.toolTip=Clique no gr\u00E1fico para modificar o dia 
 
-AboutDialog.Content=<html>Direitos de c\u00F3pia &copy; 2009 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00E3o: <b>{1}</b></html>
+AboutDialog.Content=<html>Direitos de cópia &copy; 2009 <b>{0}</b> - Todos os direitos reservado<br>Vers\u00E3o: <b>{1}</b></html>
 AboutDialog.License.TabName=Licen\u00E7a
 AboutDialog.RelNotes.TabName=Notas distribu\u00EDdas
 AboutDialog.Contributors.TabName=Contribuintes
@@ -167,7 +167,7 @@ AccountDialog.title.new=Nova conta
 AccountDialog.title.edit=Edite a conta
 AccountDialog.account=Conta :
 AccountDialog.account.tooltip=Digite a identifica\u00e7\u00E3o da conta
-AccountDialog.balance=Balan\u00E7o inicial :
+AccountDialog.balance=Balan\u00E7o initial :
 AccountDialog.balance.tooltip=Digite o balan\u00E7o inicial da conta
 AccountDialog.err1=Este modo n\u00E3o est\u00E1 dispon\u00EDvel porque o nome da conta est\u00E1 em branco
 AccountDialog.err2=Este modo n\u00E3o est\u00E1 dispon\u00EDvel porque uma conta com o mesmo nome j\u00E1 existe
@@ -232,7 +232,7 @@ GenericButton.duplicate=duplique
 GenericButton.yes=Sim
 GenericButton.no=n\u00E3o
 
-Transaction.0=S/O
+Transaction.0=S/T
 Transaction.account=Conta
 Transaction.14=Restante
 Transaction.date=Data
@@ -429,99 +429,99 @@ StatisticsPlugin.tooltip=Esta aba mostra algumas estat\u00EDsticas da sua conta
 
 HelpManager.errorDialog.message=Erro {0} abrindo ajuda
 HelpManager.errorDialog.title=N\u00E3o foi poss\u00EDvel mostrar a ajuda
-MARCO HERE  
-CustomFilterPanel.account.toolTip=S\u00E9lectionner ici les comptes autoris\u00E9s
-CustomFilterPanel.category.toolTip=S\u00E9lectionnez ici les cat\u00E9gories autoris\u00E9es
-CustomFilterPanel.mode.toolTip=S\u00E9lectionnez ici les modes de paiement autoris\u00E9s
+ 
+CustomFilterPanel.account.toolTip=Selecione contas válidas
+CustomFilterPanel.category.toolTip=Selecione categorias válidas
+CustomFilterPanel.mode.toolTip=Selecione modo de pagamento válidos
 
-CustomFilterPanel.description.toolTip=Texte \u00E0 comparer au libell\u00E9 des op\u00E9rations
-CustomFilterPanel.description.contains=Contient
-CustomFilterPanel.description.contains.toolTip=S\u00E9lectionner ce bouton si le libell\u00E9 doit contenir champ ci-contre
-CustomFilterPanel.description.equals=Egal \u00E0
-CustomFilterPanel.description.equals.toolTip=S\u00E9lectionner ce bouton si le libell\u00E9 doit \u00EAtre \u00E9gal au champ ci-contre
-CustomFilterPanel.description.ignoreCase=Ignorer la casse
-CustomFilterPanel.description.ignoreCase.toolTip=Cochez cette case si la comparaison ne doit pas faire la distinction majuscule/minuscules
-CustomFilterPanel.description.ignoreDiacriticals=Ignorer les accents
-CustomFilterPanel.description.ignoreDiacriticals.toolTip=Cochez cette case si la comparaison ne doit pas tenir compte des accents
-CustomFilterPanel.description.regularExpression=Expression r\u00E9guli\u00E8re
-CustomFilterPanel.description.regularExpression.toolTip=S\u00E9lectionner ce bouton si le libell\u00E9 doit satisfaire l'expression r\u00E9guli\u00E8re contenue dans champ ci-contre
+CustomFilterPanel.description.toolTip=Texto para ser comparado com a descrição de transação
+CustomFilterPanel.description.contains=Contém
+CustomFilterPanel.description.contains.toolTip=Selecione para manter transações com a descrição contida nos seguintes campos
+CustomFilterPanel.description.equals=Igual a
+CustomFilterPanel.description.equals.toolTip=Selecione para manter transações com a descrição igual aos seguintes campos
+CustomFilterPanel.description.ignoreCase=Ignora maiúsculos e minúsculos
+CustomFilterPanel.description.ignoreCase.toolTip=Selecione esta caixa para ignorar diferenças entre maiúsculos e minúsculos
+CustomFilterPanel.description.ignoreDiacriticals=Ignora acentos
+CustomFilterPanel.description.ignoreDiacriticals.toolTip=Selecione esta caixa para ignorar acentos durante a comparação
+CustomFilterPanel.description.regularExpression=Expressões regulares
+CustomFilterPanel.description.regularExpression.toolTip=Selecione para manter a descrição da transação que é exatamente o mesmo que a seguinte expressão regular
 
-CustomFilterPanel.amount.all=Tous
-CustomFilterPanel.amount.all.toolTip=S\u00E9lectionnez ce bouton pour ne pas filtrer sur le montant de l'op\u00E9ration
-CustomFilterPanel.amount.equals=Egal \u00E0
-CustomFilterPanel.amount.equals.toolTip=S\u00E9lectionnez ce bouton pour ne retenir que les op\u00E9rations dont le montant est saisi ci-contre
-CustomFilterPanel.amout.between=Compris entre
-CustomFilterPanel.amout.between.toolTip=S\u00E9lectionnez ce bouton pour ne retenir que les op\u00E9rations dont le montant est compris entre les montants ci-contre
-CustomFilterPanel.amout.minimum=Montant minimum
-CustomFilterPanel.amount.to=et
-CustomFilterPanel.amount.maximum=Montant maximum
+CustomFilterPanel.amount.all=Todas
+CustomFilterPanel.amount.all.toolTip=Limpa os valores da transação filtrada
+CustomFilterPanel.amount.equals=Igual a
+CustomFilterPanel.amount.equals.toolTip=Selecione transações com valores iguais aos valores dos seguintes campos
+CustomFilterPanel.amout.between=Entre
+CustomFilterPanel.amout.between.toolTip=Selecione transações com valores entre os valores dos seguintes campos
+CustomFilterPanel.amout.minimum=Valor máximo
+CustomFilterPanel.amount.to=e
+CustomFilterPanel.amount.maximum=Valor mínimo
 
-CustomFilterPanel.date.all=Toutes
-CustomFilterPanel.date.all.toolTip=S\u00E9lectionnez ce bouton pour ne pas filtrer sur la date d'op\u00E9ration
-CustomFilterPanel.date.equals=Egale \u00E0
-CustomFilterPanel.date.equals.toolTip=S\u00E9lectionnez ce bouton pour ne retenir que les op\u00E9rations dont la date est saisie ci-contre
-CustomFilterPanel.date.between=Comprise entre
-CustomFilterPanel.date.between.toolTip=S\u00E9lectionnez ce bouton pour ne retenir que les op\u00E9rations dont la date est comprise entre les dates ci-contre
-CustomFilterPanel.date.from.toolTip=Plus ancienne date d'op\u00E9ration autoris\u00E9e
-CustomFilterPanel.date.to=et
-CustomFilterPanel.date.to.toolTip=Plus r\u00E9cente date d'op\u00E9ration autoris\u00E9e
+CustomFilterPanel.date.all=Todas
+CustomFilterPanel.date.all.toolTip=Selecione este para limpar o filtro da data do valor da transação
+CustomFilterPanel.date.equals=Igual a
+CustomFilterPanel.date.equals.toolTip=Selecione este para manter transações com datas iguais ao seguinte
+CustomFilterPanel.date.between=comparação entre
+CustomFilterPanel.date.between.toolTip=Selecione este para manter transações com datas entre as seguintes datas
+CustomFilterPanel.date.from.toolTip=Primeira data válida
+CustomFilterPanel.date.to=e
+CustomFilterPanel.date.to.toolTip=Última data válida
 
-CustomFilterPanel.valueDate.all=Toutes
-CustomFilterPanel.valueDate.all.toolTip=S\u00E9lectionnez ce bouton pour ne pas filtrer sur la date de valeur
-CustomFilterPanel.valueDate.between=Comprise entre
-CustomFilterPanel.valueDate.between.toolTip=S\u00E9lectionnez ce bouton pour ne retenir que les op\u00E9rations dont la date de valeur est comprise entre les dates ci-contre
-CustomFilterPanel.valueDate.equals=Egale \u00E0
-CustomFilterPanel.valueDate.equals.toolTip=S\u00E9lectionnez ce bouton pour ne retenir que les op\u00E9rations dont la date de valeur est saisie ci-contre
-CustomFilterPanel.valueDate.from.toolTip=Plus ancienne date de valeur autoris\u00E9e
-CustomFilterPanel.valueDate.to=et
-CustomFilterPanel.valueDate.to.toolTip=Plus r\u00E9cente date de valeur autoris\u00E9e
+CustomFilterPanel.valueDate.all=Todas
+CustomFilterPanel.valueDate.all.toolTip=Selecione este para limpar o valor da data da transação filtrada
+CustomFilterPanel.valueDate.between=Comparação entre
+CustomFilterPanel.valueDate.between.toolTip=Selecione este para manter transações com valores das datas entre os valores das seguintes datas
+CustomFilterPanel.valueDate.equals=Igual a
+CustomFilterPanel.valueDate.equals.toolTip=Selecione este para manter transações com valores das datas iguais aos valores das seguintes datas
+CustomFilterPanel.valueDate.from.toolTip=Primeiro valor da data válido
+CustomFilterPanel.valueDate.to=e
+CustomFilterPanel.valueDate.to.toolTip=Último valor da data válido
 
-CustomFilterPanel.number.contains=Contient
-CustomFilterPanel.number.contains.toolTip=S\u00E9lectionner ce bouton si le num\u00E9ro doit contenir champ de droite
-CustomFilterPanel.number.equals=Egal \u00E0
-CustomFilterPanel.number.equals.toolTip=S\u00E9lectionner ce bouton si le num\u00E9ro doit \u00EAtre \u00E9gal au champ ci-contre
-CustomFilterPanel.number.regularExpression=Expression r\u00E9guli\u00E8re
-CustomFilterPanel.number.regularExpression.toolTip=S\u00E9lectionner ce bouton si le num\u00E9ro doit satisfaire l'expression r\u00E9guli\u00E8re contenue dans champ de droite
-CustomFilterPanel.number.toolTip=Texte \u00E0 comparer aux num\u00E9ros des op\u00E9rations
+CustomFilterPanel.number.contains=Contém
+CustomFilterPanel.number.contains.toolTip=Selecione para manter transações com número que contém os seguintes campos
+CustomFilterPanel.number.equals=Igual a
+CustomFilterPanel.number.equals.toolTip=Selecione para manter transações com número igual ao seguintes campos
+CustomFilterPanel.number.regularExpression=Expressões regulares
+CustomFilterPanel.number.regularExpression.toolTip=Selecione para manter transações com números que é exatamente o mesmo que a seguinte expressão regular
+CustomFilterPanel.number.toolTip=Texto para comparar com o número da transação
 
-CustomFilterPanel.check=Pointage
-CustomFilterPanel.checked.toolTip=Cochez cette case pour autoriser les op\u00E9rations point\u00E9es
-CustomFilterPanel.unchecked.toolTip=Cochez cette case pour autoriser les op\u00E9rations non point\u00E9es
-CustomFilterPanel.statement.contains=Contient
-CustomFilterPanel.statement.contains.toolTip=S\u00E9lectionner ce bouton si le relev\u00E9 doit contenir champ de droite
-CustomFilterPanel.statement.equals=Egal \u00E0
-CustomFilterPanel.statement.equals.toolTip=S\u00E9lectionner ce bouton si le relev\u00E9 doit \u00EAtre \u00E9gal au champ ci-contre
-CustomFilterPanel.statement.regularExpression=Expression r\u00E9guli\u00E8re
-CustomFilterPanel.statement.regularExpression.toolTip=S\u00E9lectionner ce bouton si le relev\u00E9 doit satisfaire l'expression r\u00E9guli\u00E8re contenue dans champ de droite
-CustomFilterPanel.statement.toolTip=Texte \u00E0 comparer aux relev\u00E9s des op\u00E9rations
+CustomFilterPanel.check=Verificando
+CustomFilterPanel.checked.toolTip=Deselecione para evitar transações verificadas
+CustomFilterPanel.unchecked.toolTip=Deselecione para evitar transações não verificadas
+CustomFilterPanel.statement.contains=Contém
+CustomFilterPanel.statement.contains.toolTip=Selecione para manter transações com identidade das declarações que contém os seguintes campos
+CustomFilterPanel.statement.equals=Igual a
+CustomFilterPanel.statement.equals.toolTip=Selecione para manter transações com declarações igual aos seguintes campos
+CustomFilterPanel.statement.regularExpression=Expressões regulares
+CustomFilterPanel.statement.regularExpression.toolTip=Seelecione para manter transações com declarações que é exatamente igual as seguintes expressões regulares
+CustomFilterPanel.statement.toolTip=Texto para comparar com declarações da transação
 
-CustomFilterPanel.clearAll=Effacer tous les filtres
-CustomFilterPanel.clearAll.toolTip=Cliquez ici pour effacer tous les filtres
-CustomFilterPanel.regexprHelp.toolTip=Cliquez ici pour avoir de l'aide sur les expressions r\u00E9guli\u00E8res
+CustomFilterPanel.clearAll=Limpa todos os filtros
+CustomFilterPanel.clearAll.toolTip=Clique para limpar todos os filtros
+CustomFilterPanel.regexprHelp.toolTip=Clique aqui para ajuda em expressões regulares
 
-CustomFilterPanel.error.amountMimimum=Le montant minimum est incorrect
-CustomFilterPanel.error.amountMaximum=Le montant maximum est incorrect
-CustomFilterPanel.error.amountFromHigherThanTo=Le montant minimum doit \u00EAtre inf\u00E9rieur au montant maxi
-CustomFilterPanel.error.dateFrom=La date "\u00E0 partir de" est incorrecte
-CustomFilterPanel.error.date.to=La date "jusqu'\u00E0" est incorrecte
-CustomFilterPanel.error.dateFromHigherThanTo=La date de d\u00E9but doit \u00EAtre ant\u00E9rieure \u00E0 la date de fin
-CustomFilterPanel.error.valueDateFrom=La date de valeur "\u00E0 partir de" est incorrecte
-CustomFilterPanel.error.valueDateTo=La date de valeur "jusqu'\u00E0" est incorrecte
-CustomFilterPanel.error.valueDateFromHigherThanTo=La date de valeur de d\u00E9but doit \u00EAtre ant\u00E9rieure \u00E0 la date de valeur de fin
-CustomFilterPanel.error.noAccount=Au moins un compte doit \u00EAtre s\u00E9lectionn\u00E9
-CustomFilterPanel.error.noCategory=Au moins une cat\u00E9gorie doit \u00EAtre s\u00E9lectionn\u00E9e
-CustomFilterPanel.error.noMode=Au moins un mode de paiement doit \u00EAtre s\u00E9lectionn\u00E9
+CustomFilterPanel.error.amountMimimum=O valor minímo não é válido
+CustomFilterPanel.error.amountMaximum=O valor máximo não é válido
+CustomFilterPanel.error.amountFromHigherThanTo=O valor minímo é maior do que o valor máximo
+CustomFilterPanel.error.dateFrom=A última data é inválida
+CustomFilterPanel.error.date.to=A primeira data é inválida
+CustomFilterPanel.error.dateFromHigherThanTo=A primeira data está além da última
+CustomFilterPanel.error.valueDateFrom=O primeiro valor da data é inválido
+CustomFilterPanel.error.valueDateTo=O último valor é inválido
+CustomFilterPanel.error.valueDateFromHigherThanTo=O primeiro valor da data está além do último
+CustomFilterPanel.error.noAccount=Por favor selecione uma ou mais contas
+CustomFilterPanel.error.noCategory=Por favor selecione uma ou mais categorias
+CustomFilterPanel.error.noMode=Por favor selecione um ou mais modo
 
-BudgetPanel.title=Budget
-BudgetPanel.tooltip=R\u00E9partition des d\u00E9penses et recettes suivant les mois/ann\u00E9es
-BudgetPanel.export=Exporter
-BudgetPanel.export.toolTip=Exporte le tableau au format texte
-BudgetPanel.filter=Filtre
-BudgetPanel.filter.tooltip=Restreint le filtre \u00E0 la s\u00E9lection actuelle
-BudgetPanel.perMonth=Vue par mois
-BudgetPanel.perMonth.tooltip=Cliquez ici pour obtenir la ventilation par mois
-BudgetPanel.perYear=Vue par an
-BudgetPanel.perYear.tooltip=Cliquez ici pour obtenir la ventilation par ann\u00E9e
+BudgetPanel.title=Orçamento
+BudgetPanel.tooltip=Função de distribuição de recibos e despesas do mês/ano e categorias
+BudgetPanel.export=Exportador
+BudgetPanel.export.toolTip=Exports esta tabela para um arquivo de texto
+BudgetPanel.filter=Filtro
+BudgetPanel.filter.tooltip=Estreiaa o filtro para a seleção atual
+BudgetPanel.perMonth=Por mês
+BudgetPanel.perMonth.tooltip=Seleciona o orçamento anual vistado
+BudgetPanel.perYear=Por ano
+BudgetPanel.perYear.tooltip=Seleciona o orçamento anual vistado 
 
-ErrorManager.message=Une erreur est survenue \!\n L'op\u00E9ration en cours est abandonn\u00E9e.
-ErrorManager.title=Erreur \!\!\!
+ErrorManager.message=Um erro ocorreu \!\n A atual operação está sendo abortada.
+ErrorManager.title=Alerta \!\!\!
