Fixing bug for the accent - missing u for the UTF code.

--- a/Yapbam/src/net/yapbam/gui/tools/currencyNames_pt.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/currencyNames_pt.properties
@@ -2,7 +2,7 @@ AUD=D\u00F3lar Australiano
 BGN=Lev
 BRL=Real
 CAD=D\u00F3lar Canadense
-CHF=Franco Su\00ED\u00E7o
+CHF=Franco Su\u00ED\u00E7o
 CNY=Yuan Renminbi
 CZK=Coroa
 DKK=Coroa Dinamarquesa
