--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -6,7 +6,7 @@ MainFrame.FinalBalance=Balan\u00e7o final: {0}
 MainFrame.CheckedBalance.ToolTip=Balan\u00e7o da moeda verificada (transa\u00E7\u00F5es n\u00E3o verificadas ser\u00E3o ignoradas)
 MainFrame.CurrentBalance.ToolTip=Balan\u00e7o atual (transa\u00E7\u00F5es com valores a p\u00E1rtir da data de hoje ser\u00E3o ignoradas)
 MainFrame.FinalBalance.ToolTip=Balan\u00e7o final ( nenhuma transa\u00E7\U00E3o ser\u00E1 ignorada)
-MainFrame.Transactions=transa\u00E7\u00F5es
+MainFrame.Transactions=Transa\u00E7\u00F5es
 MainFrame.Transactions.toolTip=Mostra a tabela de transa\u00E7\u00F5es e as ferramentas de ediç\u00E3o, duplicados, verificar...
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Balan\u00e7o negativo: {0}
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Balan\u00e7o positivo: {0}
@@ -22,7 +22,7 @@ MainFrame.ReadLastError=Um erro aconteceu no \u00FAltimo arquivo aberto {0}
 MainFrame.ShowSubtransactions=Mostra sub-transa\u00E7\u00F5es
 MainFrame.ShowSubtransactions.All=Todas
 MainFrame.ShowSubtransactions.message=Mostra sub-transa\u00E7\u00F5es ?
-MainFrame.ShowSubtransactions.Non=Nenhuma
+MainFrame.ShowSubtransactions.None=Nenhuma
 MainFrame.ShowSubtransactions.ToolTip=Clique neste bot\u00E3o para mostrar ou ocultar todas as sub-transa\u00E7\u00F5es
 
 MainMenu.File=Arquivo
@@ -58,25 +58,25 @@ MainMenu.Preferences=Prefer\u00EAncias
 MainMenu.Preferences.ToolTip=Abri o gerenciador de prefer\u00EAncias
 MainMenu.Preferences.Mnemonic=P
 
-MainMenu.Quit=Abandonar
-MainMenu.Quit.Mnemonic=A
-MainMenu.Quit.Accelerator=A
+MainMenu.Quit=Fechar
+MainMenu.Quit.Mnemonic=F
+MainMenu.Quit.Accelerator=F
 MainMenu.Quit.ToolTip=Fecha o programa
 
 #This menu has been removed
 #MainMenu.Accounts=Contas
 #MainMenu.Accounts.Mnemonic=C
-#MainMenu.Accounts.ToolTip=Permite-lhe dirigir contas (cria\u00e7\u00E3o, nomea\u00e7\u00E3o, etc ...)
+#MainMenu.Accounts.ToolTip=Permite-lhe manusear contas (cria\u00e7\u00E3o, nomea\u00e7\u00E3o, etc ...)
 
 MainMenu.Accounts.New=Contas novas
 MainMenu.Accounts.New.Mnemonic=C
 MainMenu.Accounts.New.ToolTip=Cria uma conta nova
 
-MainMenu.Transactions=transa\u00E7\u00F5es Novas
+MainMenu.Transactions=Transa\u00E7\u00F5es Novas
 MainMenu.Transactions.Mnemonic=T
-MainMenu.Transactions.ToolTip=Permite-lhe dirigir transa\u00E7\u00F5es (cria\u00e7\u00E3o, edi\u00e7\u00E3o, etc ...)
+MainMenu.Transactions.ToolTip=Permite-lhe manusear transa\u00E7\u00F5es (cria\u00e7\u00E3o, edi\u00e7\u00E3o, etc ...)
 
-MainMenu.Transactions.New=transa\u00E7\u00F5es
+MainMenu.Transactions.New=Transa\u00E7\u00F5es
 MainMenu.Transactions.New.Mnemonic=N;
 MainMenu.Transactions.New.Accelerator=N
 MainMenu.Transactions.New.ToolTip=Cria transa\u00E7\u00F5es novas
@@ -95,7 +95,7 @@ MainMenu.Transactions.Delete.ToolTip=Deleta a transa\u00e7\u00E3o selecionada
 
 MainMenu.Transactions.Check=Verificar transa\u00E7\u00F5es
 MainMenu.Transactions.Check.ToolTip=Verifique a transa\u00e7\u00E3o selecionada
-MainMenu.Transactions.convertToPeriodical=Converte para transa\u00e7\u00E3o peri\u00F3dica
+MainMenu.Transactions.convertToPeriodical=Converter para transa\u00e7\u00E3o peri\u00F3dica
 MainMenu.Transactions.convertToPeriodical.ToolTip=Cria uma transa\u00e7\u00E3o peri\u00F3dica baseado no tipo de transa\u00e7\u00E3o
 
 MainMenu.Transactions.Periodical=Gerar transa\u00E7\u00F5es peri\u00F3dicas
@@ -147,7 +147,7 @@ BalanceHistory.title=Hist\u00F3ria do Balan\u00E7o
 BalanceHistory.toolTip=Gr\u00E1fico do balan\u00E7o do dia
 BalanceHistory.balance=Balan\u00E7o do {0} : {1}
 BalanceHistory.chart.toolTip=Move a barra vertical para mostrar abaixo o balan\u00E7o de outro dia
-BalanceHistory.showGrid=Mostra a grade 
+BalanceHistory.showGrid=Inserir a grade 
 BalanceHistory.showGrid.toolTip=Selecione esta caixa para mostra a grade
 BalanceHistory.report.toolTip=Clique no gr\u00E1fico para modificar o dia 
 
@@ -226,9 +226,9 @@ GenericButton.ok.toolTip=Validar a atual entrada
 GenericButton.close.ToolTip=Sai/fecha desta caixa de di\u00E1logo
 GenericButton.close=Fechar
 GenericButton.new=Nova
-GenericButton.edit=Edite
-GenericButton.delete=Delete
-GenericButton.duplicate=duplique
+GenericButton.edit=Editar
+GenericButton.delete=Deletar
+GenericButton.duplicate=Duplicar
 GenericButton.yes=Sim
 GenericButton.no=n\u00E3o
 
@@ -418,7 +418,7 @@ StatisticsPlugin.bar.debts=Despesas
 StatisticsPlugin.bar.empty=N\u00E3o foi poss\u00EDvel achar nenhuma transa\u00e7\u00E3o atrav\u00E9s do filtro 
 StatisticsPlugin.bar.receipt=Recibos
 StatisticsPlugin.bar.tabname=Recibos/Despesas
-StatisticsPlugin.bar.title=Categoria-s\u00E1bia de recibos e despesas
+StatisticsPlugin.bar.title=Categoria s\u00E1bia de recibos e despesas
 StatisticsPlugin.bar.tooltip=Este gr\u00E1fico apresenta valores da categoria-s\u00E1bia de recibos e despesas
 StatisticsPlugin.pie.tabname=Despesas l\u00EDquidas
 StatisticsPlugin.pie.tooltip=Este gr\u00E1fico apresenta distribui\u00e7\u00E3o de despesas l\u00EDquidas da categoria-s\u00E1bia (despesas - recibos) 
@@ -515,9 +515,9 @@ CustomFilterPanel.error.noMode=Por favor selecione um ou mais modo
 BudgetPanel.title=Orçamento
 BudgetPanel.tooltip=Função de distribuição de recibos e despesas do mês/ano e categorias
 BudgetPanel.export=Exportador
-BudgetPanel.export.toolTip=Exports esta tabela para um arquivo de texto
+BudgetPanel.export.toolTip=Exporta esta tabela para um arquivo de texto
 BudgetPanel.filter=Filtro
-BudgetPanel.filter.tooltip=Estreiaa o filtro para a seleção atual
+BudgetPanel.filter.tooltip=Estreita o filtro para a seleção atual
 BudgetPanel.perMonth=Por mês
 BudgetPanel.perMonth.tooltip=Seleciona o orçamento anual vistado
 BudgetPanel.perYear=Por ano
