--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -24,6 +24,8 @@ MainFrame.ShowSubtransactions.All=Todas
 MainFrame.ShowSubtransactions.message=Mostra sub-transa\u00E7\u00F5es ?
 MainFrame.ShowSubtransactions.None=Nenhuma
 MainFrame.ShowSubtransactions.ToolTip=Clique neste bot\u00E3o para mostrar ou ocultar todas as sub-transa\u00E7\u00F5es
+MainFrame.showColumns=Mostra colunas ...
+MainFrame.showColumns.ToolTip=Clique neste bot\u00E3o para mostrar/ocultar colunas
 
 MainMenu.File=Arquivo
 MainMenu.File.Mnemonic=A
