--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -49,6 +49,13 @@ MainMenu.SaveAs=Enregistrer sous ...
 MainMenu.SaveAs.Mnemonic=S
 MainMenu.SaveAs.ToolTip=Cr\u00E9e une copie du fichier de comptes actuellement ouvert
 
+MainMenu.Import=Importer
+MainMenu.Import.Mnemonic=I
+MainMenu.Import.ToolTip=Importe les données à partir d'un fichier texte sauvegardé préalablement sous un autre gestionnaire de comptes bancaires
+MainMenu.Export=Exporter ...
+MainMenu.Export.Mnemonic=E
+MainMenu.Export.ToolTip=Exporte les données dans un fichier texte
+
 MainMenuBar.Print=Imprimer ...
 MainMenuBar.Print.ToolTip=Lance l'impression
 MainMenuBar.Print.Accelerator=P
