--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -50,6 +50,13 @@ MainMenu.SaveAs=Salvar como ...
 MainMenu.SaveAs.Mnemonic=S
 MainMenu.SaveAs.ToolTip=Cria uma c\u00F3pia do arquivo atual
 
+MainMenu.Import=Import
+MainMenu.Import.Mnemonic=I
+MainMenu.Import.ToolTip=Imports data from text file saved earlier with another account manager
+MainMenu.Export=Export ...
+MainMenu.Export.Mnemonic=E
+MainMenu.Export.ToolTip=Exports data to a text file
+
 MainMenuBar.Print=Imprimir ...
 MainMenuBar.Print.ToolTip=Imprimi a vista atual
 MainMenuBar.Print.Accelerator=I
