--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -534,3 +534,14 @@ BudgetPanel.perYear.tooltip=Seleciona o orçamento anual vistado
 
 ErrorManager.message=Um erro ocorreu \!\n A atual operação está sendo abortada.
 ErrorManager.title=Alerta \!\!\!
+
+ExportDialog.title=Export ...
+ExportDialog.allRadioButton=Export all transactions
+ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
+ExportDialog.filteredRadioButton=Export filtered transactions
+ExportDialog.filteredRadioButton.toolTip=Select this option to only export filtered transactions
+ExportDialog.headerCheckbox=Include row headers
+ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
+ExportDialog.includeInitialBalanceCheckBox=Include initial balance
+ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include fake transactions that will reflect the account initial balance
+ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
