--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -534,3 +534,14 @@ BudgetPanel.perYear.tooltip=Cliquez ici pour obtenir la ventilation par ann\u00E
 
 ErrorManager.message=Une erreur est survenue \!\n L'op\u00E9ration en cours est abandonn\u00E9e.
 ErrorManager.title=Erreur \!\!\!
+
+ExportDialog.title=Exporter ...
+ExportDialog.allRadioButton=Exporter toutes les opérations
+ExportDialog.allRadioButton.toolTip=Sélectionnez cette option pour exporter toutes les opérations
+ExportDialog.filteredRadioButton=Exporter les opérations filtrées
+ExportDialog.filteredRadioButton.toolTip=Sélectionnez cette option pour n'exporter que les opérations conformes au filtre
+ExportDialog.headerCheckbox=Inclure des en-têtes de colonnes
+ExportDialog.headerCheckbox.toolTip=Cochez cette case pour commencer le fichier par une ligne d'en-tête
+ExportDialog.includeInitialBalanceCheckBox=Inclure le solde initial
+ExportDialog.includeInitialBalanceCheckBox.toolTip=Cochez cette case pour inclure des opérations simulées reflétant le solde initial des comptes
+ExportDialog.message=<html>Cochez les colonnes à inclure dans le fichier.<br>Vous pouvez changez l'ordre des colonnes dans le fichier en le modifiant ci-dessous.</html> 
