--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -545,3 +545,21 @@ ExportDialog.headerCheckbox.toolTip=Cochez cette case pour commencer le fichier 
 ExportDialog.includeInitialBalanceCheckBox=Inclure le solde initial
 ExportDialog.includeInitialBalanceCheckBox.toolTip=Cochez cette case pour inclure des opérations simulées reflétant le solde initial des comptes
 ExportDialog.message=<html>Cochez les colonnes à inclure dans le fichier.<br>Vous pouvez changez l'ordre des colonnes dans le fichier en le modifiant ci-dessous.</html> 
+ExportDialog.nothingToExport=You must select at least one field to export
+
+ImportDialog.title=Importer
+ImportDialog.YapbamFields=Attribut d'opération de Yapbam
+ImportDialog.linkedTo=Lié à
+ImportDialog.linkedTo.toolTip=Cochez les cases ci-dessous pour lier les colonnes du fichier et les attributs des opérations
+ImportDialog.importedFields=Colonne du fichier importé
+ImportDialog.importedFields.toolTip=Sélectionnez la colonne du fichier correspondant à l'attribut d'opération de cette ligne
+ImportDialog.ignoreFirstLine=Ignorer la première ligne du fichier
+ImportDialog.ignoreFirstLine.toolTip=Cochez cette case pour ignorer la première ligne du fichier (si, par exemple, c'est une ligne d'en-tête)
+ImportDialog.first.toolTip=Cliquez ici pour utiliser la première ligne du fichier pour les titres des colonnes du fichier importé
+ImportDialog.last.toolTip=Cliquez ici pour utiliser la dernière ligne du fichier pour les titres des colonnes du fichier importé
+ImportDialog.next.toolTip=Cliquez ici pour utiliser la ligne suivante du fichier pour les titres des colonnes du fichier importé
+ImportDialog.previous.toolTip=Cliquez ici pour utiliser la ligne précédente du fichier pour les titres des colonnes du fichier importé
+ImportDialog.addToAccount=Ajouter au compte :
+ImportDialog.addToAccount.toolTip=Choisissez le compte où ajouter les opérations
+ImportDialog.addToCurrentFile=Ajouter au fichier courant
+ImportDialog.addToCurrentFile.toolTip=Cochez cette case pour ajouter les opérations au fichier courant (déselectionner pour créer un nouveau fichier)
