--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -540,8 +540,26 @@ ExportDialog.allRadioButton=Export all transactions
 ExportDialog.allRadioButton.toolTip=Select this option to export all the transactions
 ExportDialog.filteredRadioButton=Export filtered transactions
 ExportDialog.filteredRadioButton.toolTip=Select this option to only export filtered transactions
-ExportDialog.headerCheckbox=Include row headers
+ExportDialog.headerCheckbox=Include column headers
 ExportDialog.headerCheckbox.toolTip=Check this box to start the file with a header line
 ExportDialog.includeInitialBalanceCheckBox=Include initial balance
 ExportDialog.includeInitialBalanceCheckBox.toolTip=Check this box to include fake transactions that will reflect the account initial balance
 ExportDialog.message=<html>Check the columns to output to file.<br>Move the columns below to change their order in the file.</html> 
+ExportDialog.nothingToExport=You must select at least one field to export
+
+ImportDialog.title=Import
+ImportDialog.YapbamFields=Yapbam transaction fields
+ImportDialog.linkedTo=Linked to
+ImportDialog.linkedTo.toolTip=Check these boxes to link file columns with transaction fields
+ImportDialog.importedFields=Imported file columns
+ImportDialog.importedFields.toolTip=Select here which file column contains the each Yapbam transaction attribute
+ImportDialog.ignoreFirstLine=Ignore first line
+ImportDialog.ignoreFirstLine.toolTip=Check this box to ignore the file first line (if it's a header line)
+ImportDialog.first.toolTip=Sets imported file columns menus to first file line
+ImportDialog.last.toolTip=Sets imported file columns menus to last file line
+ImportDialog.next.toolTip=Sets imported file columns menus to next file line
+ImportDialog.previous.toolTip=Sets imported file columns menus to previous file line
+ImportDialog.addToAccount=Add to account:
+ImportDialog.addToAccount.toolTip=Select the account where to add the transactions
+ImportDialog.addToCurrentFile=Add to current file
+ImportDialog.addToCurrentFile.toolTip=Check this box to add transactions to the current file (uncheck to create a new file)
