--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -538,6 +538,13 @@ ErrorManager.title=Erreur \!\!\!
 ExportDialog.title=Exporter ...
 ExportDialog.allRadioButton=Exporter toutes les opérations
 ExportDialog.allRadioButton.toolTip=Sélectionnez cette option pour exporter toutes les opérations
+ExportDialog.columnSeparator=Séparateur de colonnes
+ExportDialog.columnSeparator.customized=Personnalisé :
+ExportDialog.columnSeparator.customized.toolTip=Choisissez cette option pour entrer un séparateur de colonnes personnalisé ci-contre
+ExportDialog.columnSeparator.customizedChar.toolTip=Tapez le séparateur de colonnes personnalisé ici
+ExportDialog.columnSeparator.defaultSeparator=Séparateur par défaut (Tabulation)
+ExportDialog.columnSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le séparateur de colonnes par défaut (Tabulation)
+ExportDialog.columnSeparator.customized.empty=Merci de taper un séparateur personnalisé (un seul caractère), ou de sélectionner le séparateur par défaut
 ExportDialog.filteredRadioButton=Exporter les opérations filtrées
 ExportDialog.filteredRadioButton.toolTip=Sélectionnez cette option pour n'exporter que les opérations conformes au filtre
 ExportDialog.headerCheckbox=Inclure des en-têtes de colonnes
