--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -313,7 +313,7 @@ PreferencesDialog.Localization.customCountry=Personnalis\u00E9
 PreferencesDialog.Localization.customCountry.tooTip=Cliquez sur ce choix, ou s\u00E9lectionnez le pays dans la liste ci-dessous pour choisir un pays diff\u00E9rent de celui de votre syst\u00E8me
 PreferencesDialog.Localization.defaultCountry=Par d\u00E9faut ({0})
 PreferencesDialog.Localization.defaultCountry.toolTip=En s\u00E9lectionnant ce choix, le pays retenu sera celui par d\u00E9faut pour votre syst\u00E8me ({0})
-PreferencesDialog.Localization.defaultLanguage=Langue du syst\u00E8me (Anglais si non disponible dans Yapbam)
+PreferencesDialog.Localization.defaultLanguage=Langue du syst\u00E8me (Anglais si cette langue n'est pas disponible dans Yapbam)
 PreferencesDialog.Localization.defaultLanguage.toolTip=Cliquer ici pour utiliser la langue par d\u00E9faut du syst\u00E8me ou, \u00E0 si elle n'est pas disponible dans Yapbam, l'anglais
 PreferencesDialog.Localization.language=Langue
 PreferencesDialog.Localization.revert=Annuler les modifications
