--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -5,7 +5,7 @@ MainFrame.CurrentBalance=Balan\u00e7o atual: {0}
 MainFrame.FinalBalance=Balan\u00e7o final: {0}
 MainFrame.CheckedBalance.ToolTip=Balan\u00e7o da moeda verificada (transa\u00E7\u00F5es n\u00E3o verificadas ser\u00E3o ignoradas)
 MainFrame.CurrentBalance.ToolTip=Balan\u00e7o atual (transa\u00E7\u00F5es com valores a p\u00E1rtir da data de hoje ser\u00E3o ignoradas)
-MainFrame.FinalBalance.ToolTip=Balan\u00e7o final ( nenhuma transa\u00E7\U00E3o ser\u00E1 ignorada)
+MainFrame.FinalBalance.ToolTip=Balan\u00e7o final ( nenhuma transa\u00E7\u00E3o ser\u00E1 ignorada)
 MainFrame.Transactions=Transa\u00E7\u00F5es
 MainFrame.Transactions.toolTip=Mostra a tabela de transa\u00E7\u00F5es e as ferramentas de ediç\u00E3o, duplicados, verificar...
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Balan\u00e7o negativo: {0}
@@ -52,7 +52,7 @@ MainMenu.SaveAs.ToolTip=Cria uma c\u00F3pia do arquivo atual
 
 MainMenu.Import=Import
 MainMenu.Import.Mnemonic=I
-MainMenu.Import.ToolTip=Imports data from text file saved earlier with another account manager
+MainMenu.Import.ToolTip=Importa dados de outra contra através de um arquivo
 MainMenu.Export=Export ...
 MainMenu.Export.Mnemonic=E
 MainMenu.Export.ToolTip=Exports data to a text file
@@ -332,12 +332,12 @@ PreferencesDialog.AutoUpdate.manually.toolTip=Selecione aqui se voc\u00EA quer q
 PreferencesDialog.AutoUpdate.title=atualiza\u00E7\u00F5es
 PreferencesDialog.AutoUpdate.toolTip=Esta aba permite-lhe configurar a procura para atualiza\u00E7\u00F5es
 
-PreferencesDialog.LookAndFeel.title=Apar\U00EAncias
-PreferencesDialog.LookAndFeel.toolTip=Esta aba permite-lhe configurar a apar\U00EAncia do Yapbam
-PreferencesDialog.LookAndFeel.java=Apar\U00EAncia independente do sistema
-PreferencesDialog.LookAndFeel.java.toolTip=Clique neste bot\u00E3o para o Yapbam usar apar\U00EAncia independente do sistema
-PreferencesDialog.LookAndFeel.platform=Sistema padr\u00E3o de apar\U00EAncias
-PreferencesDialog.LookAndFeel.platform.toolTip=Clique para o Yapbam usar o sistema padr\u00E3o de apar\U00EAncias
+PreferencesDialog.LookAndFeel.title=Apar\u00EAncias
+PreferencesDialog.LookAndFeel.toolTip=Esta aba permite-lhe configurar a apar\u00EAncia do Yapbam
+PreferencesDialog.LookAndFeel.java=Apar\u00EAncia independente do sistema
+PreferencesDialog.LookAndFeel.java.toolTip=Clique neste bot\u00E3o para o Yapbam usar apar\u00EAncia independente do sistema
+PreferencesDialog.LookAndFeel.platform=Sistema padr\u00E3o de apar\u00EAncias
+PreferencesDialog.LookAndFeel.platform.toolTip=Clique para o Yapbam usar o sistema padr\u00E3o de apar\u00EAncias
 
 PreferencesDialog.Network.title=Rede
 PreferencesDialog.Network.toolTip=Esta aba permite-lhe configurar como ser\u00E1 a conex\u00E3o do Yapbam para a Internet
